--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -51,6 +51,11 @@
                     <div>
                       <a href="/users/register" style="text-decoration:none" class="form-fork">Creá tu cuenta</a>
                     </div>
+                    <br>
+                    <br>
+                    <div class="meetUs">
+                      <a href="/users/contacto">¿QUERÉS CONOCERNOS?</a>
+                    </div>
                   </form>
                 </div>
               </main>
