--- a/src/views/products/cart.ejs
+++ b/src/views/products/cart.ejs
@@ -30,12 +30,14 @@
         document.getElementById("number").value = value;
       }
     }
-  </script>
-  </>
+    </script>
     <body>
         <%- include("../partials/header.ejs") %>
         <main class="cartMain">
-            <h2>Revisa tu carrito</h2>
+        <tbody>
+          <tr>
+            <h2 class="revisa">REVISA TU CARRITO</h2>
+          </td>
             <div class="cartProduct">
               <img src="/images/product.png" alt="" />
               <div class="cartProductDetail">
@@ -67,53 +69,22 @@
                   </div>
                 </div>
                 <div class="cartRemove">
-                  <a href=""><h5>remove</h5></a>
+                  <a href="" id="btn-sacar"><h5>Remover</h5></a>
                 </div>
               </div>
-            </div>
-            <div class="cartProduct">
-              <img src="/images/product.png" alt="" />
-              <div class="cartProductDetail">
-                <h3>TITLE</h3>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos,
-                  consectetur magnam animi possimus natus quo neque nobis itaque eum
-                  labore quod fugiat corrupti tenetur sint ab officiis laboriosam ad
-                  odio?
-                </p>
               </div>
-              <div class="cartAmountPrice">
-                <div>
-                  <div class="cartAmount">
-                    <button onclick="incrementValue()" data-qty="1">+</button>
-                    <input
-                      id="number"
-                      data-qty="1"
-                      type="number"
-                      min="1"
-                      value="1"
-                      data-key="myInput1"
-                      style="text-align: center"
-                    />
-                    <button onclick="decrementValue()" data-qty="1">-</button>
-                  </div>
-                  <div class="cartPrice">
-                    <h4>$30.000</h4>
-                  </div>
-                </div>
-                <div class="cartRemove">
-                  <a href=""><h5>remove</h5></a>
-                </div>
-              </div>
+            </td>
+            </tr>
+            </tbody>
             </div>
-            <div class="cartTotal">
-              <div>Total</div>
-              <div>$60.000</div>
-            </div>
+            
           </main>
-          <footer class="background">
+          <footer class="background2">
            
               <%- include('../partials/footer') %>
           </footer>
+          <script>
+            
+          </script>
     </body>
 </html>
