--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -3,65 +3,46 @@
 
     <body id="productDetail">
         <%- include("../partials/header.ejs") %>
-<<<<<<< HEAD
         <main>
-            <header>
-                <h2>Producto</h2>
-            </header>
             <div class="detail">
                 <div class="panel">
-                    <img class="imgP" src=<%=`/images/products/${product.image}` %> alt="Product image" width="100%" %>>
+                    <img class="imgP" src=<%=`/images/products/${product.image}` %> alt="Product image" width="80%" %>>
                 </div>
                 <div class="panel">
                     <div class="section">
-                        <h4>Nombre</h4>
-                        <p>
+                        <h4>NOMBRE:</h4>
+                        <p class="productTitle">
                             <%=product.name %>
                         </p>
                     </div>
+                    <br>
                     <div class="section">
-                        <h4>Descripción</h4>
-                        <p>
+                        <h4>DESCRIPCIÓN:</h4>
+                        <p class="productDescrip">
                             <%= product.description %>
                         </p>
                     </div>
                     <div class="section">
-                        <h4>Precio</h4>
-                        <p>
+                        <br>
+                        <h4>PRECIO:</h4>
+                        <p class="productPrice">
                            $ <%=product.price %>
                         </p>
                     </div>
                     <div class="cartAdd">
                         <form action="/cart" method="post">
-                            <input type="submit" value="Agregar al Carrito">
+                            <input type="submit" class="agregar" value="AGREGAR AL CARRITO">
                         </form>
                     </div>
                     
                 </div>
-=======
-        <main class="mainLogin">
-            <div class="mobileProductDetails">
-              <h2><%=product.name %></h2>
->>>>>>> dc86f12e83efdeb7b30af9e860723c0999eaca8c
             </div>
-            <div class="productImage">
-              <img
-                src=<%=`/images/products/${product.image}` %>
-                alt="Product image"
-                class="productImg"
-              />
-            </div>
-            <div class="productDetails">
-              <h5>Categoria</h5>
-              <h2><%=product.name %></h2>
-              <p><%= product.description %></p>
-              <h4>$ <%=product.price %></h4>
-              <button class="cartButton">Agregar al Carrito</button>
           </main>
           <footer class="background">
           
             <%- include('../partials/footer') %>
             </footer>
+        
     </body>
 
 
