--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -196,8 +196,8 @@ main .atributes .options {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 40px;
   width: 320px;
-  margin-top: 88px;
-  margin-bottom: 88px;
+  
+  
   display: flex;
   padding: 20px;
   justify-content: space-evenly;
@@ -773,6 +773,60 @@ left: 10px;
 .slider__btn--right{
 right: 10px;
 }
+/*slider2*/
+
+.container-slider1{
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  margin: auto;
+  }
+  
+  .slider1{
+  display: flex;
+  height: 400%;
+  width: 300%;
+  margin-left: -100%;
+  }
+  
+  .slider__section1{
+  width: 100%;
+  }
+  
+  .slider__img1{
+  
+  width: 100%;
+  height: 100%;
+  }
+  
+  .slider__btn{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.7);
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  text-align: center;
+  border-radius: 50%;
+  cursor:pointer;
+  }
+  
+  .slider__btn:hover{
+  background: #fff;
+  }
+  
+  .slider__btn--left1{
+  left: 10px;
+  }
+  
+  .slider__btn--right1{
+  right: 10px;
+  }
+
+
 
 .texto{
   display: inline-block;
